// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_var LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "hide_var",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) call_after_init LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "call_after_init",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) warning_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] this is a deliberate test warning",
  ],
  "lspWarnings": 1,
  "name": "warning_message",
  "tcErrors": 0,
  "tcMessages": [
    "[warning] this is a deliberate test warning",
  ],
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) noinit LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "noinit",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_on_onlchange LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "init_on_onlchange",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_hex LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_hex",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_copy LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_copy",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "linkalways",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_check LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_check",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_instance_in_retain LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_instance_in_retain",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_all_locals LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "hide_all_locals",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_assign LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_assign",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "reflection",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unknown_attribute_typo LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Unknown attribute pragma 'qualifid_only'. User-defined attributes should use a vendor prefix to avoid collisions.",
  ],
  "lspWarnings": 1,
  "name": "unknown_attribute_typo",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) enable_dynamic_creation LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "enable_dynamic_creation",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "const_replaced",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) const_non_replaced LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "const_non_replaced",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) global_init_slot LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "global_init_slot",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_display LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "monitoring_display",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) monitoring_encoding LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "monitoring_encoding",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) subsequent LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "subsequent",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "suppress_warning",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditionalshow LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditionalshow",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pingroup LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "pingroup",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) info_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[information] this is a deliberate test info",
  ],
  "lspWarnings": 0,
  "name": "info_message",
  "tcErrors": 0,
  "tcMessages": [
    "[info] this is a deliberate test info",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) text_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[hint] this is a deliberate test text",
  ],
  "lspWarnings": 0,
  "name": "text_message",
  "tcErrors": 0,
  "tcMessages": [
    "[info] this is a deliberate test text",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) instance_path_with_reflection LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "instance_path_with_reflection",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_bin LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_bin",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_dec LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_dec",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) displaymode_invalid_value LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "displaymode_invalid_value",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) suppress_warning_multi LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "suppress_warning_multi",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_init_aliases LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_init_aliases",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) linkalways_with_unused_pou LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "linkalways_with_unused_pou",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditionalshow_all_locals LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditionalshow_all_locals",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pin_presentation_order LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "pin_presentation_order",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) estimated_stack_usage LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "estimated_stack_usage",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) no_virtual_actions LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "no_virtual_actions",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) io_function_block LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "io_function_block",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) call_after_global_init_slot LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] Pragma 'call_after_global_init_slot' requires companion 'linkalways' on the enclosing FB or variable.",
  ],
  "lspWarnings": 0,
  "name": "call_after_global_init_slot",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) warning_disable_restore LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "warning_disable_restore",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) region_basic LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "region_basic",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) error_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] this is a deliberate test error",
  ],
  "lspWarnings": 0,
  "name": "error_message",
  "tcErrors": 1,
  "tcMessages": [
    "[error] this is a deliberate test error",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_init_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_reinit_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_canonical LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "fb_exit_canonical",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_wrong_return_type LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Init must return BOOL.",
  ],
  "lspWarnings": 0,
  "name": "fb_init_wrong_return_type",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_init_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Init requires VAR_INPUT parameter 'bInCopyCode : BOOL' at position 2.",
  ],
  "lspWarnings": 0,
  "name": "fb_init_missing_bInCopyCode",
  "tcErrors": 1,
  "tcMessages": [
    "[error] An 'FB_Init'-Method of a functionblock or struct needs two inputs 'bInitRetains' and 'bInCopyCode' of type BOOL.",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_exit_missing_bInCopyCode LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Exit requires VAR_INPUT parameter 'bInCopyCode : BOOL' at position 1.",
  ],
  "lspWarnings": 0,
  "name": "fb_exit_missing_bInCopyCode",
  "tcErrors": 1,
  "tcMessages": [
    "[error] An 'FB_Exit'-Method of a functionblock or struct needs an input 'bInCopyCode' of type BOOL.",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) fb_reinit_with_params LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 1,
  "lspMessages": [
    "[error] FB_Reinit does not accept extra VAR_INPUT parameters.",
  ],
  "lspWarnings": 0,
  "name": "fb_reinit_with_params",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_double_underscore LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] Identifiers starting with '__' are reserved for system-generated names",
  ],
  "lspWarnings": 0,
  "name": "identifier_double_underscore",
  "tcErrors": 5,
  "tcMessages": [
    "[error] Unexpected Token '__systemReserved' found",
    "[error] ';' expected instead of ':'",
    "[error] Unexpected Token ':' found",
    "[error] ';' expected instead of 'INT'",
    "[error] Unexpected Token 'INT' found",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) identifier_consecutive_underscores LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] Multiple consecutive underscores are not permitted in identifiers",
  ],
  "lspWarnings": 0,
  "name": "identifier_consecutive_underscores",
  "tcErrors": 5,
  "tcMessages": [
    "[error] Unexpected Token 'foo__bar' found",
    "[error] ';' expected instead of ':'",
    "[error] Unexpected Token ':' found",
    "[error] ';' expected instead of 'INT'",
    "[error] Unexpected Token 'INT' found",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_default_50000 LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "init_slot_default_50000",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_alarm_manager LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Slot 30000 is reserved by CODESYS (Library: Alarm Manager / VisuFPlot / VisuTrendStorageAccess: Alarm + visu init). Pick a unique slot.",
  ],
  "lspWarnings": 1,
  "name": "init_slot_reserved_alarm_manager",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_reserved_device_object LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[warning] Slot 60000 is reserved by CODESYS (DeviceObject / TrendRecordingObject: Device FB instances + trend recording). Pick a unique slot.",
  ],
  "lspWarnings": 1,
  "name": "init_slot_reserved_device_object",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) init_slot_user_early LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "init_slot_user_early",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_local_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[information] 'iCounter' shadows a same-name declaration in outer scope 'FB_LANG_shadowing_method_local_shadows_member'.",
  ],
  "lspWarnings": 0,
  "name": "shadowing_method_local_shadows_member",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) shadowing_method_param_shadows_member LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [
    "[information] 'iValue' shadows a same-name declaration in outer scope 'FB_LANG_shadowing_method_param_shadows_member'.",
  ],
  "lspWarnings": 0,
  "name": "shadowing_method_param_shadows_member",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_int_to_real_valid",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_real_to_int_valid LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_real_to_int_valid",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_int_to_real_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_int_to_real_wrong_source",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_dint_to_int_wrong_source LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_dint_to_int_wrong_source",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conversion_implicit_dint_to_int LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conversion_implicit_dint_to_int",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) duplicate_declaration LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 1,
  "lspMessages": [
    "[error] 'iCounter' is already declared in this scope",
  ],
  "lspWarnings": 0,
  "name": "duplicate_declaration",
  "tcErrors": 1,
  "tcMessages": [
    "[error] A local variable named 'iCounter' is already defined in 'FB_LANG_duplicate_declaration'",
  ],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unresolved_identifier_in_body LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "unresolved_identifier_in_body",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) pragma_conflict_hide_plus_monitoring LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "pragma_conflict_hide_plus_monitoring",
  "tcErrors": 0,
  "tcMessages": [],
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditional_define_then_if LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditional_define_then_if",
  "tcErrors": 2,
  "tcMessages": [
    "[error] Unexpected Pragma: 'ELSE' found without matching 'if'",
    "[warning] The code 'this_is_not_valid_st_at_all_xyz_999;",
    "[error] Unexpected Pragma: 'END_IF' found without matching 'if'",
  ],
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditional_else_branch_taken LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditional_else_branch_taken",
  "tcErrors": 2,
  "tcMessages": [
    "[warning] The code 'this_should_be_stripped_and_never_compiled_abc;",
    "[error] Unexpected Pragma: 'ELSE' found without matching 'if'",
    "[error] Unexpected Pragma: 'END_IF' found without matching 'if'",
  ],
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditional_elsif_chain LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditional_elsif_chain",
  "tcErrors": 3,
  "tcMessages": [
    "[warning] The code 'broken_first_branch_xyz;",
    "[error] Unexpected Pragma: 'ELSIF' found without matching 'if'",
    "[error] Unexpected Pragma: 'ELSE' found without matching 'if'",
    "[warning] The code 'broken_else_branch_xyz;",
    "[error] Unexpected Pragma: 'END_IF' found without matching 'if'",
  ],
  "tcWarnings": 2,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) conditional_undefine_after_define LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": false,
  "lspErrors": 0,
  "lspMessages": [],
  "lspWarnings": 0,
  "name": "conditional_undefine_after_define",
  "tcErrors": 2,
  "tcMessages": [
    "[warning] The code 'broken_should_be_stripped_xyz;",
    "[error] Unexpected Pragma: 'ELSE' found without matching 'if'",
    "[error] Unexpected Pragma: 'END_IF' found without matching 'if'",
  ],
  "tcWarnings": 1,
}
`;
